test/files/neg/bug608.check
bug608.scala:16: error: type mismatch;
 found   : (a) => a
 required: (_14.a) => ? where val _14: hs{type s = hs; type a = ha}
	     = g(f(x).bimap(id))
                            ^
one error found
